# mssqlbak-tests

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: # SQL Server Columnstore: How Deleted Bi.md  260616-2-fixture-dbcc-page-verifier.md  260616-3-random-order-fixtures-plan.md  260616-status.md  260617-1-cci-correctness-and-dirty-path.md  260617-1-log-dbcc-probe-fixture.md  260617-2-g44.md  260617-3-checksum-integrity.md  260617-4-cross-version-correctness-gaps.md  260618-1-checkpoint-table-page-level-xde-slots.md  260618-2-enc3-bugs.md  260619-1-varbinary-bak.md  260619-2-evidence-tracking-plan.md  260623-1-ddl.md  260623-2-rust-page-compress-fix.md  BACKUP_COVERAGE.md  BAK_FORMAT_SPEC.md  BAK_SPEC_FIXTURES.md  BYTE_MAP.md  COLUMNSTORE_COVERAGE_OVERHAUL_PLAN.md  CONCURRENT_OPERATIONS_COVERAGE.md  CONSTRAINT_COVERAGE.md  CORROBORATION_SOURCES.md  COVERAGE.md  Columnstore indexes have evolved from a .md  DIRTY_BACKUP_ANALYSIS.md  DIRTY_BACKUP_GAPS_PLAN.md  ENGINE_VALIDATION.md  FIXTURE_GAPS.md  GAP_ANALYSIS.md  METADATA_COVERAGE.md  PERFORMANCE_PLAN.md  ROBUSTNESS_COVERAGE.md  SAMPLE_COVERAGE.md  SAMPLE_TESTING_PLAN.md  SS2022_FULL_COVERAGE_PLAN.md  TYPE_COVERAGE.md  XPRESS_IMPL_HISTORY.md  bak_lakebase_lakehouse.md  columnstore_algorithm_map.md  (+61 more)
mssqlbak_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: _forge_ground_truth.py  _v4_builder.py  census_baseline.json  compare_fixture_json_fields.py  conftest.py  engine_support.py  fixture_companions.py  test_alias_types_coverage.py  test_archive_columnstore_partition_coverage.py  test_bacpac.py  (+162 more)
(+2456 files in other folders)
